--- a/WispSurvivor/WispSurvivor.csproj
+++ b/WispSurvivor/WispSurvivor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RogueWisp</AssemblyName>
-    <AssemblyVersion>2.1.3.63</AssemblyVersion>
-    <FileVersion>2.1.3.63</FileVersion>
+    <AssemblyVersion>2.1.3.69</AssemblyVersion>
+    <FileVersion>2.1.3.69</FileVersion>
     <RootNamespace>Rein</RootNamespace>
     <UserSecretsId>392ba4cc-368a-4518-b19f-f550dca1e784</UserSecretsId>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
@@ -43,7 +43,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\AssemblyLoader.cs" Link="AssemblyLoader.cs" />
+    <Compile Include="..\__Standalone\AssemblyLoader.cs" Link="AssemblyLoader.cs" />
+    <Compile Include="..\__Standalone\ResourceTools.cs" Link="ResourceTools.cs" />
   </ItemGroup>
   
   <ItemGroup>
@@ -68,13 +69,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="AutomaticTokens.tt">
-      <LastGenOutput>AutomaticTokens.cs</LastGenOutput>
       <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>AutomaticTokens.cs</LastGenOutput>
     </None>
     <None Update="RogueWispPlugin\Versioning.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Versioning.cs</LastGenOutput>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CustomToolNamespace></CustomToolNamespace>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -466,5 +468,8 @@
   </ItemGroup>
   <Target Name="AfterCompile">
     <Exec Command="echo &quot;&quot;" />
+  </Target>
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="CD $(SolutionDir)__Standalone\&#xD;&#xA;CALL prebuild.bat $(SolutionDir) $(ProjectDir)" />
   </Target>
 </Project>
