--- a/GeneralFixes/GeneralFixes.csproj
+++ b/GeneralFixes/GeneralFixes.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>2.3.0.10</AssemblyVersion>
-    <FileVersion>2.3.0.10</FileVersion>
+    <AssemblyVersion>2.3.0.34</AssemblyVersion>
+    <FileVersion>2.3.0.34</FileVersion>
     <RootNamespace>Rein</RootNamespace>
   </PropertyGroup>
 
@@ -27,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\AssemblyLoader.cs" Link="AssemblyLoader.cs" />
+    <Compile Include="..\__Standalone\AssemblyLoader.cs" Link="AssemblyLoader.cs" />
+    <Compile Include="..\__Standalone\ResourceTools.cs" Link="ResourceTools.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -113,7 +114,6 @@
     </Reference>
     <Reference Include="ReinCore">
       <HintPath>..\libs\Rein\ReinCore.dll</HintPath>
-      <Private>false</Private>
     </Reference>
     <Reference Include="Rewired_Core">
       <HintPath>..\libs\Unity\Rewired_Core.dll</HintPath>
@@ -419,5 +419,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="CD $(SolutionDir)__Standalone\&#xD;&#xA;CALL prebuild.bat $(SolutionDir) $(ProjectDir)" />
+  </Target>
 
 </Project>
