--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,6 @@ dotnet_diagnostic.CA1812.severity = none
 
 # IDE0011: Add braces
 csharp_prefer_braces = when_multiline:silent
+
+# CS0618: Type or member is obsolete
+dotnet_diagnostic.CS0618.severity = error
