--- a/Sniper/Sniper.csproj
+++ b/Sniper/Sniper.csproj
@@ -7,8 +7,8 @@
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AssemblyVersion>1.0.0.223</AssemblyVersion>
-    <FileVersion>1.0.0.223</FileVersion>
+    <AssemblyVersion>1.0.0.275</AssemblyVersion>
+    <FileVersion>1.0.0.275</FileVersion>
     <RootNamespace>Sniper</RootNamespace>
   </PropertyGroup>
 
@@ -459,6 +459,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="States\Other\" />
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
