--- a/.editorconfig
+++ b/.editorconfig
@@ -38,7 +38,7 @@ dotnet_style_parentheses_in_other_operators = always_for_clarity:warning
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:warning
 
 # Modifier preferences
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
+dotnet_style_require_accessibility_modifiers = always:warning
 
 # Expression-level preferences
 dotnet_style_coalesce_expression = true:warning
