Added beginnings of procedural navmesh gen

--- a/ILHelpers/ILHelpers.csproj
+++ b/ILHelpers/ILHelpers.csproj
@@ -11,6 +11,7 @@
 	
   <PropertyGroup>
 	  <t4inc>$(MSBuildProjectDirectory)\Codegenincludes</t4inc>
+	  <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
