--- a/ReinLunarWickedRing/ReinLunarWickedRing.csproj
+++ b/ReinLunarWickedRing/ReinLunarWickedRing.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyVersion>1.0.0.26</AssemblyVersion>
     <FileVersion>1.0.0.26</FileVersion>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
