--- a/ReinCore/ReinCore.csproj
+++ b/ReinCore/ReinCore.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>2.0.0.19</AssemblyVersion>
-    <FileVersion>2.0.0.19</FileVersion>
+    <AssemblyVersion>2.0.0.22</AssemblyVersion>
+    <FileVersion>2.0.0.22</FileVersion>
 	<LangVersion>Preview</LangVersion>
   </PropertyGroup>
 
@@ -31,6 +31,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <RootNamespace>Rein</RootNamespace>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
