--- a/StutterStunter/StutterStunter.csproj
+++ b/StutterStunter/StutterStunter.csproj
@@ -3,14 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	<LangVersion>Preview</LangVersion>
-    <AssemblyVersion>2.1.0.23</AssemblyVersion>
-    <FileVersion>2.1.0.23</FileVersion>
+    <AssemblyVersion>2.1.1.23</AssemblyVersion>
+    <FileVersion>2.1.1.23</FileVersion>
     <RootNamespace>Rein</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
